--- a/Análise de Sentimento -  Desafio AEVO.ipynb
+++ b/Análise de Sentimento -  Desafio AEVO.ipynb
@@ -17,7 +17,15 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NLP (Natural Language Processing) ou PLN (Processamemento de Linguagem Natural)\n",
+    "  * É uma área dentro da Inteligência Artificial (IA) que se dedica a desenvolver a capacidade da tecnologia em entender a linguagem dos seres humanos.\n",
+    "  * Serve como um tradutor que permite que a tecnologia entenda o usuário mesmo ele usando a linguagem natural.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -700,7 +708,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x20b9e42b088>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1effa1235c8>"
       ]
      },
      "execution_count": 11,
@@ -1157,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1326,8 +1334,8 @@
       "A frase 'Estou muito feliz com o governo de Minas esse ano' é: Neutro\n",
       "A frase 'O estado de Minas Gerais decretou calamidade financeira!!!' é: Negativo\n",
       "A frase 'A segurança desse país está deixando a desejar' é: Neutro\n",
-      "A frase 'O governador de Minas é mais uma vez do PT' é: Negativo\n",
-      "A frase 'Homem é preso em bh' é: Neutro\n",
+      "A frase 'O governador de Minas é mais uma vez do PT' é: Neutro\n",
+      "A frase 'Homem é preso em bh' é: Positivo\n",
       "A frase ',,,,,' é: Neutro\n",
       "A frase 'Cartão BHBus dará vantagens para usuários do transporte coletivo de BH' é: Neutro\n",
       "A frase 'funk de bh = melhor do brasil' é: Neutro\n",
@@ -1370,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1391,7 @@
       "SVM 1 é 36.36363636363637\n",
       "SVM 2 é 45.45454545454545\n",
       "---------------------------------\n",
-      "RandomForest 1 é 45.45454545454545\n",
+      "RandomForest 1 é 63.63636363636363\n",
       "RandomForest 2 é 63.63636363636363\n"
      ]
     }
@@ -1417,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1434,7 @@
        "{'n_estimators': 100}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1479,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
